# nixstrap

./: .gitignore  README.md  flake.nix  pyproject.toml
nixstrap/: __init__.py  __main__.py  cli.py  detect.py  nix.py
nixstrap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nixstrap/backends/: __init__.py  base.py  debootstrap.py  dnf.py  pacstrap.py  tarball.py  zypper.py
tests/: test_backends.py  test_cli.py  test_detect.py  test_nix.py
