[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nixstrap"
version = "0.1.0"
description = "Bootstrap a Linux rootfs from any distro's software repo using Nix"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
nixstrap = "nixstrap.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
